# ibex

./: CMakeLists.txt  README.md  ibex-cli.cpp
src/ibex/: ibex.cpp  ibex.hpp
tests/: CMakeLists.txt  unittests.cpp
